# ShihoBot

./: .env.example  .gitignore  bot.py  pyproject.toml
plugins/_llm/: LLM.py  __init__.py  config.py
plugins/_llm/events/: message_handler.py  poke_handler.py
plugins/_llm/plugins/common/: holiday.py
plugins/_llm/plugins/planner/: __init__.py  config.py
plugins/_llm/plugins/replier/: __init__.py
plugins/_llm/plugins/scheduler/: __init__.py  config.py
plugins/_llm/utils/: helper.py  poke_queue.py
plugins/essence_it/: __init__.py
plugins/group_name/: __init__.py  config.py
plugins/is_it_boom/: __init__.py
plugins/llm/: LLM.py  __init__.py
plugins/llm/events/: message_handler.py
plugins/llm/plugins/common/: __init__.py  context.py  message_tracker.py
plugins/llm/plugins/continuitier/: __init__.py  config.py
plugins/llm/plugins/planner/: __init__.py  config.py
plugins/llm/plugins/replier/: __init__.py  config.py
plugins/llm/plugins/scheduler/: __init__.py  config.py
plugins/llm/utils/: helper.py
plugins/mute/: __init__.py
plugins/webhook/: __init__.py  config.py
utils/: helper.py  log.py
